<resources>
    <string name="app_name">Haven2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Haven</string>
    <!-- Strings related to bottom navigation -->
    <string name="title_home">Home</string>
    <string name="title_trending">Trending</string>
    <string name="title_library">Library</string>
    <!-- Strings related to login -->
    <string name="title_activity_login_screen">LoginScreen</string>
    <!-- Strings related to registration -->
    <string name="register_username_hint">Enter Username</string>
    <string name="register_set_password_hint">Set Password</string>
    <string name="register_reenter_password_hint">Re-Enter Password</string>
    <string name="register_header">Register Your Account</string>
    <string name="register_button">Confirm</string>
    <!-- Strings related to activity_main_drawer -->
    <string name="option_one">Option One</string>
    <string name="option_two">Option Two</string>
    <string name="option_three">Option Three</string>
    <string name="option_four">Option Four</string>
    <string name="account_menu">Account Menu</string>
    <string name="edit_account">Edit Account</string>
    <string name="log_out">Log Out</string>
</resources>
