<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menuOne"
        android:checkableBehavior="single">
        <item
            android:id="@+id/optionOne"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/option_one" />
        <item
            android:id="@+id/optionTwo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/option_two" />
        <item
            android:id="@+id/optionThree"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/option_three" />
        <item
            android:id="@+id/optionFour"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/option_four" />
    </group>

    <item
        android:id="@+id/accountMenu"
        android:title="@string/account_menu">
        <menu>
            <item
                android:id="@+id/editAccount"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/edit_account" />
            <item
                android:id="@+id/logOut"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
